# ht-fetch-ids

./: .gitignore  LICENSE  README.rst  ht_fetch_ids.py  setup.cfg  test_enumcrons.py
src/ht_fetch_ids/: extract_enumcrons.py  ht_fetch_ids.py  print_col.py
tests/unit/: test_ht_fetch_ids.py
