[metadata]
name = ht-fetch-ids
description = Fetch HathiTrust volume IDs based on a CSV of bibliographic identifiers (OCLC, LCCN, ISBN, ISSN)
author = Nick Ver Steegh
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages =
    ht-fetch-ids
install_requires =
    requests>=2
    requests_cache>=0.9
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
dev =
    black