[metadata]
name = ht-fetch-ids
version = 0.1
description = Reconcile bibliographic identifiers from Innovative Sierra create list exports with HathiTrust volume IDs
author = Nicholas Ver Steegh
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    ht_fetch_ids
install_requires =
    requests>=2
    requests_cache>=0.9
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
dev =
    pytest>=7
    black>=19

[options.entry_points]
console_scripts =
    ht-fetch-ids = ht_fetch_ids.ht_fetch_ids:main
    print-col = ht_fetch_ids.print_col:main
    extract-enumcrons = ht_fetch_ids.extract_enumcrons:main